--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="ChatNFT mints NFTs from ChatGPT responses. Powered by SUAVE." />
+    <meta name="keywords" content="ChatGPT, NFT, ChatNFT, SUAVE, SUAPP" />
+    <meta name="author" content="flashbots" />
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌿</text></svg>">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ChatNFT</title>
